force-app/main/default/objects/Device_Firmware_Status__c/Device_Firmware_Status__c.object-meta.xml
<CustomObject>
    <label>Device Firmware Status</label>
    <pluralLabel>Device Firmware Statuses</pluralLabel>
    <nameField>
        <label>Firmware Status Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks current and latest available firmware version per registered controller. Synced from external device management system. Drives Nina PLAYER003 FIRMWARE_TROUBLESHOOTING recommendation path.</description>
</CustomObject>