force-app/main/default/objects/Device_Firmware_Status__c/fields/Controller_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Controller_Serial_Number__c</fullName>
    <label>Controller Serial Number</label>
    <length>30</length>
    <type>Text</type>
    <description>Serial number of the controller this firmware record applies to. Cross-references Asset.SerialNumber and all external telemetry files. Indexed for Data Cloud join queries.</description>
</CustomField>