force-app/main/default/objects/Device_Firmware_Status__c/fields/Current_Firmware_Version__c.field-meta.xml
<CustomField>
    <fullName>Current_Firmware_Version__c</fullName>
    <label>Current Firmware Version</label>
    <length>10</length>
    <type>Text</type>
    <description>Firmware version currently installed on this controller. Maps to device.firmwareVersion in the response contract. Nina (PLAYER003) is on 2.98; all others are on 3.02.</description>
</CustomField>