force-app/main/default/objects/Device_Firmware_Status__c/fields/External_Controller_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Controller_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Controller ID</label>
    <length>20</length>
    <type>Text</type>
    <description>Cross-reference to Asset.External_Controller_ID__c (CTRL-001 through CTRL-004). Used as upsert key during data load and for cross-object joins.</description>
</CustomField>