force-app/main/default/objects/Device_Firmware_Status__c/fields/Last_Checked_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Checked_At__c</fullName>
    <label>Last Checked At</label>
    <type>DateTime</type>
    <description>Timestamp of the most recent firmware version check. All demo records show 2024-06-10T08:00:00Z.</description>
</CustomField>