force-app/main/default/objects/Device_Firmware_Status__c/fields/Latest_Firmware_Version__c.field-meta.xml
<CustomField>
    <fullName>Latest_Firmware_Version__c</fullName>
    <label>Latest Firmware Version</label>
    <length>10</length>
    <type>Text</type>
    <description>Latest available firmware version for this controller model. Maps to device.firmwareLatest in the response contract. Current latest is 3.02 for all models.</description>
</CustomField>