force-app/main/default/objects/Device_Firmware_Status__c/fields/Update_Available__c.field-meta.xml
<CustomField>
    <fullName>Update_Available__c</fullName>
    <label>Update Available</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
    <description>True when Current_Firmware_Version__c differs from Latest_Firmware_Version__c. Only Nina (PLAYER003) has updateAvailable=true in demo seed data. Maps to device.firmwareUpdateAvailable in the response contract.</description>
</CustomField>