force-app/main/default/objects/Device_Firmware_Status__c/fields/Update_Channel__c.field-meta.xml
<CustomField>
    <fullName>Update_Channel__c</fullName>
    <label>Update Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>stable</fullName><default>true</default><label>Stable</label></value>
            <value><fullName>beta</fullName><default>false</default><label>Beta</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Firmware release channel this device is subscribed to. All demo seed records use stable channel.</description>
</CustomField>